--- a/plugins/Jobs/actionBarBossbar.yml
+++ b/plugins/Jobs/actionBarBossbar.yml
@@ -1,40 +1,72 @@
 bossBar:
-  Ben_Shapir0: true
   zNihility: true
   SeantasticSean: true
-  CringeMonster: true
-  gamaguy27: true
+  JShrives: true
+  ChickensBurning: true
+  breadboy_2011: true
   Corsair88: true
-  zKirk: true
-  ChromeGraphics: true
-  End3rduty: true
+  Sn3per: true
+  BigfootIsReal: true
+  jaboc187: true
+  Repohobo1452: true
+  Camarena: true
   ItzMecha: true
-  ChickensDying: true
-  RealRewind: true
+  Jhon_Bagoncoff: true
   TazManiac5947: true
   Brigade42nd: true
+  Smeggo: true
   Fern0711: true
+  StarmanPhilly: true
+  legomandeux: true
+  Elithegreat567: true
+  Ben_Shapir0: true
+  CringeMonster: true
+  gamaguy27: true
+  zKirk: true
+  MLG_Twinky: true
+  Kilik_CZ: true
+  ChromeGraphics: true
+  End3rduty: true
+  CoreyDaNoob: true
+  ChickensDying: true
+  RealRewind: true
+  _xmemequeenx_: true
   loovne: true
   55Navyboy: true
   JahTheSequel: true
-  Elithegreat567: true
 actionBar:
-  Ben_Shapir0: true
   zNihility: true
   SeantasticSean: true
-  CringeMonster: true
-  gamaguy27: true
+  JShrives: true
+  ChickensBurning: true
+  breadboy_2011: true
   Corsair88: true
-  zKirk: true
-  ChromeGraphics: true
-  End3rduty: true
+  Sn3per: true
+  BigfootIsReal: true
+  jaboc187: true
+  Repohobo1452: true
+  Camarena: true
   ItzMecha: true
-  ChickensDying: true
-  RealRewind: true
+  Jhon_Bagoncoff: true
   TazManiac5947: true
   Brigade42nd: true
+  Smeggo: true
   Fern0711: true
+  StarmanPhilly: true
+  legomandeux: true
+  Elithegreat567: true
+  Ben_Shapir0: true
+  CringeMonster: true
+  gamaguy27: true
+  zKirk: true
+  MLG_Twinky: true
+  Kilik_CZ: true
+  ChromeGraphics: true
+  End3rduty: true
+  CoreyDaNoob: true
+  ChickensDying: true
+  RealRewind: true
+  _xmemequeenx_: true
   loovne: true
   55Navyboy: true
   JahTheSequel: true
-  Elithegreat567: true
