--- a/plugins/Slimefun/Items.yml
+++ b/plugins/Slimefun/Items.yml
@@ -3963,3 +3963,39 @@ RADIANT_BACKPACK:
   allow-enchanting: true
   allow-disenchanting: true
   required-permission: ''
+DIET_COOKIE:
+  enabled: true
+  can-be-used-in-workbenches: false
+  hide-in-guide: false
+  allow-enchanting: true
+  allow-disenchanting: true
+  required-permission: ''
+EXPLOSIVE_SHOVEL:
+  enabled: true
+  can-be-used-in-workbenches: false
+  hide-in-guide: false
+  allow-enchanting: true
+  allow-disenchanting: true
+  required-permission: ''
+  damage-on-use: false
+AUTO_DRIER:
+  enabled: true
+  can-be-used-in-workbenches: false
+  hide-in-guide: false
+  allow-enchanting: true
+  allow-disenchanting: true
+  required-permission: ''
+STAFF_ELEMENTAL_STORM:
+  enabled: true
+  can-be-used-in-workbenches: false
+  hide-in-guide: false
+  allow-enchanting: true
+  allow-disenchanting: true
+  required-permission: ''
+ANCIENT_RUNE_LIGHTNING:
+  enabled: true
+  can-be-used-in-workbenches: false
+  hide-in-guide: false
+  allow-enchanting: true
+  allow-disenchanting: true
+  required-permission: ''
