--- a/spigot.yml
+++ b/spigot.yml
@@ -60,6 +60,7 @@ stats:
   forced-stats: {}
 world-settings:
   default:
+    view-distance: default
     verbose: true
     mob-spawn-range: 4
     hopper-amount: 1
