--- a/plugins/VotingPlugin/Config.yml
+++ b/plugins/VotingPlugin/Config.yml
@@ -1,10 +1,10 @@
 # VotingPlugin by Ben12345rocks
 # Main Config
-# See wiki for help: 
+# See wiki for help:
 # https://github.com/Ben12345rocks/VotingPlugin/wiki
 
 # Valid Options:
-# - SQLITE 
+# - SQLITE
 # - FLAT
 # - MYSQL
 DataStorage: SQLITE
@@ -14,7 +14,7 @@ DataStorage: SQLITE
 MySQL:
   Host: ''
   # Default port is 3306
-  Port: 3306 
+  Port: 3306
   Database: ''
   Username: ''
   Password: ''
@@ -75,17 +75,17 @@ VoteReminding:
       ShowTime: 50
       FadeOut: 10
     ActionBar:
-      Message: '&eRemember to vote for BlockKingdom!' 
+      Message: '&eRemember to vote for BlockKingdom!'
       Delay: 30
-    
+
 # ------------------------------------------------
 # Format
 # ------------------------------------------------
-    
+
 # Common PlacesHolders:
 # Please Note: Not all are usable in all sections
 # Special PlaceHolders will be commented where available
-# %player% = player name  
+# %player% = player name
 # %SiteName% = vote site name
 #
 # Set Message to '' (2 ') to disable message
@@ -115,18 +115,18 @@ Format:
   # Broadcast vote message
   # Set to an empty message to disable
   BroadcastMsg: '&8[&dVote&8] &eThank you %player% for voting on %SiteName%!'
-  
+
   # Broadcast only when player is online
   BroadcastWhenOnline: true
-  
+
   Commands:
     # Format for /vote
     # %num% = the number of the site, for a numbered list
     # %url% = site URL
-    Vote: 
+    Vote:
       Text:
       - '&eVote for &2Block&3Kingdom&e!'
-      
+
       # If you want to want to use the feature below where the plugin will
       # automaticly list the sites then set the message in the text above
       AutoInputSites: true
@@ -135,17 +135,17 @@ Format:
       # Requires above to be true
       # Text will be sent before this
       Sites: '&8%num%: &d&l%SiteName% &8- &e%url%'
-      
+
       # Format for /vote next
-      Next: 
+      Next:
         # First line
         Title: '&d&l%player% Next Votes:'
-        
+
         # How each line is setup for each vote site
-        # %info% = Info - See Below 
+        # %info% = Info - See Below
         # %SiteName% = site name from vote
         Layout: '&d%SiteName%: &e%info%'
-        
+
         Info:
           # Message when player can vote
           CanVote: 'Go Vote!'
@@ -157,7 +157,7 @@ Format:
           Error: '&eCould not caculate time until next vote!'
           # For sites that have this, requires votedelaydaily to be set to true in the site
           VoteDelayDaily: '%hours% Hours and %minutes% Minutes'
-          
+
        # Format for /vote last
       Last:
         # First line
@@ -170,7 +170,7 @@ Format:
         TimeFormat: '%amount% %TimeType%'
         LastVoted: '%times% ago'
         NeverVoted: 'Never voted'
-        
+
       # Format for /vote total
       Total:
       - '&d&l%player% Total Votes:'
@@ -178,15 +178,15 @@ Format:
       - '&d&lWeekly Total: &e&l%WeeklyTotal%'
       - '&d&lMonthly Total: &e&l%MonthlyTotal%'
       - '&d&lAllTime Total: &e&l%AllTimeTotal%'
-        
-      # Format for /vote total all  
+
+      # Format for /vote total all
       TotalAll:
       - '&d&lServer Total Votes:'
       - '&d&lDaily Total: &e&l%DailyTotal%'
       - '&d&lWeekly Total: &e&l%WeeklyTotal%'
       - '&d&lMonthly Total: &e&l%MonthlyTotal%'
       - '&d&lAllTime Total: &e&l%AllTimeTotal%'
-        
+
       # Format for /vote top
       Top:
         # First line
@@ -196,7 +196,7 @@ Format:
         Title: '&dTop %Top% Voters %page%/%maxpages%'
         # Line for each player in that page
         Line: '&d%num%: &e%player%, %votes%'
-        
+
       # Format for /vote help
       Help:
         # Title of /vote help
@@ -205,14 +205,14 @@ Format:
         Line: '&d&l%Command% &8- &e%HelpMessage%'
         # Require permission to see command in /v help or /av help
         RequirePermission: true
-        
+
       Best:
         Title: '&d&l%player% Best Votes'
         Lines:
         - '&dHighest Daily Total: &e&l%HighestDailyTotal%'
         - '&dHighest Week Total: &e&l%HighestWeeklyTotal%'
         - '&dHighest Month Total: &e&l%HighestMonthlyTotal%'
-        
+
       Streak:
         Title: '&d&l%player% Vote Streak'
         Lines:
@@ -223,32 +223,32 @@ Format:
         - '&dHighest Daily Streak: &e&l%BestDailyStreak%'
         - '&dHighest Week Streak: &e&l%BestWeeklyStreak%'
         - '&dHighest Month Streak: &e&l%BestMonthlyStreak%'
-        
+
       Today:
         Line: '&6%player% : %VoteSite% : %Time%'
-        
+
       # PlaceHolders:
       # %VotesRequired% = VotesRequired
       # %NeededVotes% = Number of votes needed to reach VotesRequired
       # %Votes% = Number of votes
       Party:
       - '&eCurrently at &d%Votes%&e, &d%NeededVotes% &emore votes to go to reach &e%VotesRequired%'
-      
+
       # %Points% = player points
       Points: '&d%Player% &ecurrently has &d&l%Points%&e points!'
-      
+
       ToggleBroadcast:
         Enabled: '&eYou will now see vote broadcasts.'
         Disabled: '&eYou will no longer see vote broadcasts.'
-  
+
   # Msg on top voter award, will only send message if that place has a reward set
   # %place% = place - 1,2,3,etc
   TopVoterAwardMsg: '&eYou came in %place% in top voters of the month! Here is an award!'
-  
+
   # Time Format
   # See https://docs.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html
   TimeFormat: 'EEE, d MMM yyyy HH:mm'
-  
+
   TimeFormats:
     Day: 'Day'
     Days: 'Days'
@@ -258,7 +258,7 @@ Format:
     Minutes: 'Minutes'
     Second: 'Second'
     Seconds: 'Seconds'
-  
+
   # Format for signs
   # SiteName may be all, depending on sign
   # %position% = position of player, set by sign
@@ -271,33 +271,33 @@ Format:
       Line4: '%votes% Votes'
     # Message when right clicking sign, uses same placeholders as above
     RightClickMessage: '&d&l%player% &eis &d&l%position% &ewith &d&l%votes% &evotes in &d&l%SiteName%'
-      
+
   # Message when player tries to run command without required permissions
   NoPerms: '&eYou do not have enough permission!'
-  
+
   # Message when player types a command but does not input a number where needed
   NotNumber: '&eError on &d%arg%&e, number expected!'
-  
+
   # Shop messages when using the /vote shop
   ShopPurchase: '&eYou bought the %Identifier% for %Points% Points!'
   ShopFailed: '&eYou do not have %Points% points to purchase this!'
-  
+
   # User not exist message, from commands such as /vote next (player)
   UserNotExist: '&eUser does not exist: %player%'
-  
+
   # Prev/Next page tems in GUIs
   PrevItem:
     Material: 'BLACK_STAINED_GLASS_PANE'
     Amount: 1
     Name: '&dPrevious Page'
-    
+
   NextItem:
     Material: 'BLACK_STAINED_GLASS_PANE'
     Amount: 1
     Name: '&dNext Page'
-  
+
   InvFull: '&eInventory full, dropping items on ground'
-  
+
   # Display text
   # Used in /vote top (GUI)
   TopVoter:
@@ -309,7 +309,7 @@ Format:
 # ------------------------------------------------
 # GUI Options
 # ------------------------------------------------
-  
+
 # Configure GUI's here
 # Note: Slots start at 0 instead of 1, max slot is 53 (don't go over) (E.g: last slot in first row of inventory is 8)
 # Item Material's can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Material.html
@@ -318,7 +318,7 @@ GUI:
   VoteGUI:
     # Items will be orders as it is below
     URL:
-      # Standard item format, lore is automaticly applied 
+      # Standard item format, lore is automaticly applied
       Item:
         Material: 'BOW'
         Data: 0
@@ -365,7 +365,7 @@ GUI:
         Name: '&4Vote Shop'
         Lore:
         - '&aYou currently have %points% points'
-      
+
   # GUI for /vote url
   # And /vote if enabled in Config.yml
   VoteURL:
@@ -379,7 +379,7 @@ GUI:
     AllUrlsButton:
       AlreadyVotedItem:
         Material: 'REDSTONE_BLOCK'
-        Data: 0 
+        Data: 0
         Amount: 1
         Name: '&4All Voting Sites'
         Lore:
@@ -393,14 +393,14 @@ GUI:
         - '&cClick Me'
     AlreadyVotedItem:
       Material: 'REDSTONE_BLOCK'
-      Data: 0 
+      Data: 0
       Amount: 1
     CanVoteItem:
       Material: 'EMERALD_BLOCK'
       Data: 0
       Amount: 1
     URLText: '%VoteUrl%'
-    
+
   VoteRewardBackButton: false
   # Customize /vote reward
   # Show players what you get when you vote on each site
@@ -548,7 +548,7 @@ GUI:
   VoteGUIName: '&cVoteGUI: &c&l%player%'
   VoteRewardName: 'VoteReward'
   VoteShopName: 'VoteShop'
-  
+
 BackButton:
   Material: 'PAPER'
   Data: 0
@@ -576,7 +576,7 @@ Shop:
     # Permission required, leave blank for no permission
     Permission: ''
     # Limit how many times you can buy this
-    #Limit: 
+    #Limit:
     # Rewards to run if player buys successfully
     Rewards:
       Commands:
@@ -585,7 +585,7 @@ Shop:
 # ------------------------------------------------
 # Extra Rewards
 # ------------------------------------------------
-    
+
 # To disable reward set value to []
 # Eg:
 # FirstVote: [] (All in one line)
@@ -596,7 +596,7 @@ FirstVote: []
 
 # All vote rewards
 # Reward for voting on all sites in one day
-AllSites: 
+AllSites:
   Messages:
     Player: '&eYou voted on all sites in a day!'
 
@@ -612,7 +612,7 @@ Cumulative:
     # for a daily/weekly reward instead of all of them
     VotesInSameDay: false
     VotesInSameWeek: false
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&aYou got %cumulative% cumulative votes!'
 
@@ -623,7 +623,7 @@ VoteParty:
   VotesRequired: 20
   # Increase the amount of votes required on each vote party reached
   #IncreaseVotesRquired: 10
-  # If true, players who did not vote to reach the votes required will 
+  # If true, players who did not vote to reach the votes required will
   # recieve the reward
   GiveAllPlayers: false
   # If true, the vote count will reset each day
@@ -640,17 +640,17 @@ VoteParty:
   # %player% does not work here
   Commands: []
   # Rewards to give per player
-  Rewards: 
+  Rewards:
     Commands:
     - say %player%
     Items:
       DIAMOND:
         Material: 'DIAMOND'
         Amount: 1
-  
+
 # Reset milestones at end of the month
 ResetMilestonesMonthly: false
-  
+
 MileStones:
   # Number of votes required
   # Allows multiple milestones
@@ -658,74 +658,67 @@ MileStones:
   # Can have multiple listed here
   '10':
     Enabled: true
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&f&l> &bYou have reached&e %milestone% &bvotes!'
         Player: '&aAcquired Silver Rank!'
       Commands:
-      - 'lp user %player% parent remove default'
       - 'bc %player% has voted 10 times and received &7Silver&r rank!'
-      - 'lp user %player% parent add silver'
+      - 'lp user %player% group set silver'
   '30':
     Enabled: true
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&f&l> &bYou have reached&e %milestone% &bvotes!'
         Player: '&aAcquired Gold Rank!'
       Commands:
       - 'bc %player% has voted 30 times and received &6Gold&r rank!'
-      - 'lp user %player% parent add gold'
-      - 'lp user %player% parent remove silver'
+      - 'lp user %player% group set gold'
   '70':
     Enabled: true
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&f&l> &bYou have reached&e %milestone% &bvotes!'
         Player: '&aAcquired Platinum Rank!'
       Commands:
       - 'bc %player% has voted 70 times and received &8Platinum&r rank!'
-      - 'lp user %player% parent add platinum'
-      - 'lp user %player% parent remove gold'
+      - 'lp user %player% group set platinum'
   '120':
     Enabled: true
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&f&l> &bYou have reached&e %milestone% &bvotes!'
         Player: '&aAcquired Crystal Rank!'
       Commands:
       - 'bc %player% has voted 120 times and received &5Crystal&r rank!'
-      - 'lp user %player% parent add crystal'
-      - 'lp user %player% parent remove platinum'
+      - 'lp user %player% group set crystal'
   '190':
     Enabled: true
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&f&l> &bYou have reached&e %milestone% &bvotes!'
         Player: '&aAcquired Master Rank!'
       Commands:
       - 'bc %player% has voted 190 times and received &0Master&r rank!'
-      - 'lp user %player% parent add master'
-      - 'lp user %player% parent remove crystal'
+      - 'lp user %player% group set master'
   '260':
     Enabled: true
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&f&l> &bYou have reached&e %milestone% &bvotes!'
         Player: '&aAcquired &cChampion &aRank!'
       Commands:
       - 'bc %player% has voted 260 times and received &cChampion&r rank!'
-      - 'lp user %player% parent add champion'
-      - 'lp user %player% parent remove master'
+      - 'lp user %player% group set champion'
   '350':
     Enabled: true
-    Rewards: 
+    Rewards:
       Messages:
         Player: '&f&l> &bYou have reached&e %milestone% &bvotes!'
         Player: '&aAcquired &cLegend &aRank!'
       Commands:
       - 'bc %player% has voted 350 times and received &2Leg&3end&r rank!'
-      - 'lp user %player% parent add legend'
-      - 'lp user %player% parent remove champion'
+      - 'lp user %player% group set legend'
 VoteStreak:
   # Valid options: Day, Week, Month
   Day:
@@ -767,11 +760,11 @@ VoteStreak:
     Day: 50
     Week: 50
     Month: 50
-    
+
 # Reward given when vote cooldown ended
 VoteCoolDownEndedReward: []
-          
-  
+
+
 # ONLY USE THIS FOR TITLES/SOUNDS AND OTHER EFFECTS
 # IT WILL ONLY RUN ONE TIME FOR ANY NUMBER OF OFFLINE VOTES (3 offline votes = 1 AnySiteReward)
 # Any reward files listed here are ran on vote of any site
@@ -790,7 +783,7 @@ AnySiteRewards: []
 BlackList:
 - 'Notch'
 
-# If true players with the permission 'VotingPlugin.TopVoter.Ignore' will act 
+# If true players with the permission 'VotingPlugin.TopVoter.Ignore' will act
 # as if there name was added on the the blacklist above
 # This also applies for players with op
 TopVoterIgnorePermission: false
@@ -829,7 +822,7 @@ MonthlyAwards:
     Rewards:
       Messages:
         Player: '&aYou came in second place in %TopVoter%!'
-    
+
 EnableWeeklyAwards: false
 # Rewards to give on weekly top voter
 WeeklyAwards:
@@ -842,7 +835,7 @@ WeeklyAwards:
     Rewards:
       Messages:
         Player: '&aYou came in second place in %TopVoter%!'
-    
+
 EnableDailyRewards: false
 # Rewards to give on daily top voter
 DailyAwards:
@@ -856,7 +849,7 @@ DailyAwards:
     Rewards:
       Messages:
         Player: '&aYou came in second place in %TopVoter%!'
-    
+
 # ------------------------------------------------
 # Advanced
 # Most of these values can be left untouched for most setups
@@ -872,11 +865,11 @@ AddTotals: true
 
 # Click sound when using gui
 # Set to none for no sound
-ClickSound: 
+ClickSound:
   Sound: 'UI_BUTTON_CLICK'
   Volume: 1.0
   Pitch: 1.0
-  
+
 # Limit monthly votes to number of days of a month multipled by the number of sites
 LimitMonthlyVotes: false
 
@@ -906,7 +899,7 @@ DebugInGame: false
 RequestAPI:
   DefaultMethod: 'Anvil'
   DisabledMethods: []
-  
+
 # Whether or not to log every vote to a file
 # Use this if you wanna track player votes
 # Not recommended though
