--- a/plugins/Towny/settings/Channels.yml
+++ b/plugins/Towny/settings/Channels.yml
@@ -35,12 +35,12 @@ Channels:
     general:
         commands: [g,global]
         type: GLOBAL
-        channeltag: 'Discord'
+        channeltag: ''
         messagecolour: '&f'
         permission: 'towny.chat.general'
         craftIRCTag: 'admin'
         range: '-1'
-        
+
     town:
         commands: [tc,nationchat]
         type: TOWN
@@ -49,7 +49,7 @@ Channels:
         permission: 'towny.chat.town'
         craftIRCTag: 'admin'
         range: '-1'
-         
+
     nation:
         commands: [nc,nationchat]
         type: NATION
@@ -58,7 +58,7 @@ Channels:
         permission: 'towny.chat.nation'
         craftIRCTag: 'admin'
         range: '-1'
-        
+
     staff:
         commands: [sc,staff,staffchat]
         type: DEFAULT
