--- a/plugins/StaffToggle/config.yml
+++ b/plugins/StaffToggle/config.yml
@@ -15,7 +15,7 @@ staff:
     Rank: admin
     name: Sammy5k
   ChickensDying:
-    OnDuty: nope
+    OnDuty: correct
     Rank: admin
     name: ChickensDying
   zNihility:
