--- a/plugins/mcMMO/flatfile/parties.yml
+++ b/plugins/mcMMO/flatfile/parties.yml
@@ -18,7 +18,7 @@ RetiredMC:
   Leader: 2b43669e-676d-4941-9ddc-af5d43f6635e|zNihility
   Locked: true
   Level: 10
-  Xp: 1894
+  Xp: 2200
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
@@ -31,14 +31,14 @@ RetiredMC:
   Members:
   - 2b43669e-676d-4941-9ddc-af5d43f6635e|zNihility
   - b6bb0a32-3f3a-4e47-8db1-026a17cc5bbd|ChickensDying
-  - fa0f1dc1-4c4b-4b94-bc3c-d9de62fba23e|End3rduty
+  - fa0f1dc1-4c4b-4b94-bc3c-d9de62fba23e|GrimDoggo
   - d455043e-4198-41e3-aecf-4ee2ac54f68b|CringeMonster
 Jahaven:
   Leader: c547797c-4e89-4c4a-89cd-27312fca919e|Ben_Shapir0
   Password: OnJah
   Locked: true
   Level: 10
-  Xp: 1750
+  Xp: 2310
   Ally: ''
   ExpShareMode: NONE
   ItemShareMode: NONE
