--- a/plugins/StaffToggle/config.yml
+++ b/plugins/StaffToggle/config.yml
@@ -14,10 +14,10 @@ staff:
     OnDuty: correct
     Rank: admin
     name: Sammy5k
-  ChickensDying:
+  Jones02Sean:
     OnDuty: correct
     Rank: admin
-    name: ChickensDying
+    name: Jones02Sean
   zNihility:
     OnDuty: correct
     Rank: mod
