--- a/plugins/Jobs/actionBarBossbar.yml
+++ b/plugins/Jobs/actionBarBossbar.yml
@@ -1,72 +1,124 @@
 bossBar:
-  zNihility: true
   SeantasticSean: true
   JShrives: true
-  ChickensBurning: true
+  QuasiYT: true
   breadboy_2011: true
-  Corsair88: true
-  Sn3per: true
-  BigfootIsReal: true
+  MamitaLena: true
+  219creeperboy: true
   jaboc187: true
   Repohobo1452: true
   Camarena: true
   ItzMecha: true
+  ZAKU1: true
+  cashzackwilson: true
+  TheHammer420: true
+  StarmanPhilly: true
+  legomandeux: true
+  Jones02Sean: true
+  ChillThickums: true
+  redflamesx: true
+  Sammy5k: true
+  iReapers: true
+  CringeMonster: true
+  AustinRL_: true
+  MrGamerLine1: true
+  RealRewind: true
+  55Navyboy: true
+  zNihility: true
+  TassManta: true
+  ChickensBurning: true
+  Corsair88: true
+  Sn3per: true
+  BigfootIsReal: true
+  Pugglee: true
   Jhon_Bagoncoff: true
   TazManiac5947: true
   Brigade42nd: true
   Smeggo: true
   Fern0711: true
-  StarmanPhilly: true
-  legomandeux: true
+  JaydenRocks: true
   Elithegreat567: true
   Ben_Shapir0: true
-  CringeMonster: true
+  GalaxyGAL9: true
   gamaguy27: true
+  iGooMo: true
+  Raizune: true
+  omniscient_beet: true
   zKirk: true
   MLG_Twinky: true
   Kilik_CZ: true
   ChromeGraphics: true
   End3rduty: true
+  Windowless_Van: true
   CoreyDaNoob: true
+  Carlos_Dart: true
   ChickensDying: true
-  RealRewind: true
   _xmemequeenx_: true
   loovne: true
-  55Navyboy: true
+  K9Rage: true
   JahTheSequel: true
 actionBar:
-  zNihility: true
   SeantasticSean: true
   JShrives: true
-  ChickensBurning: true
+  QuasiYT: true
   breadboy_2011: true
-  Corsair88: true
-  Sn3per: true
-  BigfootIsReal: true
+  MamitaLena: true
+  219creeperboy: true
   jaboc187: true
   Repohobo1452: true
   Camarena: true
   ItzMecha: true
+  ZAKU1: true
+  cashzackwilson: true
+  TheHammer420: true
+  StarmanPhilly: true
+  legomandeux: true
+  Jones02Sean: true
+  ChillThickums: true
+  Randoormic: true
+  redflamesx: true
+  Sammy5k: true
+  iReapers: true
+  CringeMonster: true
+  AustinRL_: true
+  MrGamerLine1: true
+  RealRewind: true
+  55Navyboy: true
+  ASDF_PvP: true
+  zNihility: true
+  TassManta: true
+  ChickensBurning: true
+  Corsair88: true
+  Sn3per: true
+  BigfootIsReal: true
+  Pugglee: true
   Jhon_Bagoncoff: true
   TazManiac5947: true
   Brigade42nd: true
   Smeggo: true
   Fern0711: true
-  StarmanPhilly: true
-  legomandeux: true
+  JaydenRocks: true
   Elithegreat567: true
   Ben_Shapir0: true
-  CringeMonster: true
+  GalaxyGAL9: true
+  Darkevil2988: true
+  Bluz__: true
   gamaguy27: true
+  iGooMo: true
+  Raizune: true
+  omniscient_beet: true
   zKirk: true
   MLG_Twinky: true
   Kilik_CZ: true
   ChromeGraphics: true
   End3rduty: true
+  Windowless_Van: true
+  Labyrinths: true
   CoreyDaNoob: true
+  Carlos_Dart: true
   ChickensDying: true
-  RealRewind: true
+  Sour_Skwee: true
   _xmemequeenx_: true
   loovne: true
-  55Navyboy: true
+  K9Rage: true
   JahTheSequel: true
