--- a/plugins/Slimefun/whitelist.yml
+++ b/plugins/Slimefun/whitelist.yml
@@ -474,6 +474,9 @@ world:
     AUTO_DRIER: true
     STAFF_ELEMENTAL_STORM: true
     ANCIENT_RUNE_LIGHTNING: true
+    COAL_GENERATOR_2: true
+    LAVA_GENERATOR_2: true
+    ANCIENT_RUNE_SOULBOUND: true
   enabled: true
 world_nether:
   enabled-items:
@@ -951,6 +954,9 @@ world_nether:
     AUTO_DRIER: true
     STAFF_ELEMENTAL_STORM: true
     ANCIENT_RUNE_LIGHTNING: true
+    COAL_GENERATOR_2: true
+    LAVA_GENERATOR_2: true
+    ANCIENT_RUNE_SOULBOUND: true
   enabled: true
 world_the_end:
   enabled-items:
@@ -1428,6 +1434,9 @@ world_the_end:
     AUTO_DRIER: true
     STAFF_ELEMENTAL_STORM: true
     ANCIENT_RUNE_LIGHTNING: true
+    COAL_GENERATOR_2: true
+    LAVA_GENERATOR_2: true
+    ANCIENT_RUNE_SOULBOUND: true
   enabled: true
 world_resource:
   enabled: true
@@ -1899,3 +1908,6 @@ world_resource:
     AUTO_DRIER: true
     STAFF_ELEMENTAL_STORM: true
     ANCIENT_RUNE_LIGHTNING: true
+    COAL_GENERATOR_2: true
+    LAVA_GENERATOR_2: true
+    ANCIENT_RUNE_SOULBOUND: true
