--- a/plugins/WorldGuard/worlds/world/regions.yml
+++ b/plugins/WorldGuard/worlds/world/regions.yml
@@ -19,14 +19,43 @@ regions:
         flags:
             build: deny
             use: allow
-            blocked-cmds: [/t new, /t claim outpost, /t claim]
             invincible: allow
+            blocked-cmds: [/t new, /t claim outpost, /t claim]
             fall-damage: deny
             pvp: deny
             mob-spawning: deny
             fire-spread: deny
         owners:
             unique-ids: [b7d591a6-7fb2-4346-968c-f58d00ea2a4a]
+        type: cuboid
+        priority: 0
+    foresta_dungeon:
+        min: {x: 1041, y: 0, z: 3225}
+        max: {x: 1268, y: 255, z: 3734}
+        members: {}
+        flags:
+            ice-form: deny
+            frosted-ice-form: deny
+            chorus-fruit-teleport: deny
+            lava-fire: deny
+            water-flow: deny
+            leaf-decay: deny
+            snow-fall: deny
+            ice-melt: deny
+            interact: allow
+            enderman-grief: deny
+            chest-access: deny
+            pvp: deny
+            mob-spawning: deny
+            fire-spread: deny
+            enderpearl: deny
+            soil-dry: deny
+            vine-growth: deny
+            build: deny
+            blocked-cmds: [/tpa, /sethome, /t new outpost, /t new, /tpahere]
+            ghast-fireball: deny
+            grass-growth: deny
+        owners: {}
         type: cuboid
         priority: 0
     __global__:
