--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Sep 03 19:20:17 UTC 2019
+#Mon Sep 16 01:30:03 UTC 2019
 broadcast-rcon-to-ops=true
 view-distance=8
 max-build-height=256
@@ -31,7 +31,7 @@ spawn-npcs=true
 spawn-animals=true
 generate-structures=true
 snooper-enabled=false
-difficulty=hard
+difficulty=normal
 function-permission-level=2
 network-compression-threshold=512
 level-type=default
