--- a/plugins/Jobs/actionBarBossbar.yml
+++ b/plugins/Jobs/actionBarBossbar.yml
@@ -2,32 +2,42 @@ bossBar:
   SeantasticSean: true
   JShrives: true
   QuasiYT: true
+  ChrisTheKnight03: true
   breadboy_2011: true
   MamitaLena: true
   219creeperboy: true
   jaboc187: true
+  LadyCheshire_: true
   Repohobo1452: true
   Camarena: true
   ItzMecha: true
+  Super_Walmart: true
   ZAKU1: true
   cashzackwilson: true
   TheHammer420: true
+  ResetTheServer: true
   StarmanPhilly: true
   legomandeux: true
   Jones02Sean: true
   ChillThickums: true
   redflamesx: true
+  UMADBRO_GTA: true
   Sammy5k: true
   iReapers: true
+  TheDevilProbably: true
   CringeMonster: true
   AustinRL_: true
+  Thorshmr13: true
   MrGamerLine1: true
+  BroBott: true
   RealRewind: true
+  AncorisPrimarch: true
   55Navyboy: true
   zNihility: true
   TassManta: true
   ChickensBurning: true
   Corsair88: true
+  IAlwaysPotato: true
   Sn3per: true
   BigfootIsReal: true
   Pugglee: true
@@ -37,13 +47,17 @@ bossBar:
   Smeggo: true
   Fern0711: true
   JaydenRocks: true
+  TheGreatRhyno: true
   Elithegreat567: true
   Ben_Shapir0: true
   GalaxyGAL9: true
+  Shushino: true
+  sister_sadness: true
   gamaguy27: true
   iGooMo: true
   Raizune: true
   omniscient_beet: true
+  nowp: true
   zKirk: true
   MLG_Twinky: true
   Kilik_CZ: true
@@ -53,6 +67,7 @@ bossBar:
   CoreyDaNoob: true
   Carlos_Dart: true
   ChickensDying: true
+  PlzResetServer: true
   _xmemequeenx_: true
   loovne: true
   K9Rage: true
@@ -61,34 +76,44 @@ actionBar:
   SeantasticSean: true
   JShrives: true
   QuasiYT: true
+  ChrisTheKnight03: true
   breadboy_2011: true
   MamitaLena: true
   219creeperboy: true
   jaboc187: true
+  LadyCheshire_: true
   Repohobo1452: true
   Camarena: true
   ItzMecha: true
+  Super_Walmart: true
   ZAKU1: true
   cashzackwilson: true
   TheHammer420: true
+  ResetTheServer: true
   StarmanPhilly: true
   legomandeux: true
   Jones02Sean: true
   ChillThickums: true
   Randoormic: true
   redflamesx: true
+  UMADBRO_GTA: true
   Sammy5k: true
   iReapers: true
+  TheDevilProbably: true
   CringeMonster: true
   AustinRL_: true
+  Thorshmr13: true
   MrGamerLine1: true
+  BroBott: true
   RealRewind: true
+  AncorisPrimarch: true
   55Navyboy: true
   ASDF_PvP: true
   zNihility: true
   TassManta: true
   ChickensBurning: true
   Corsair88: true
+  IAlwaysPotato: true
   Sn3per: true
   BigfootIsReal: true
   Pugglee: true
@@ -98,15 +123,19 @@ actionBar:
   Smeggo: true
   Fern0711: true
   JaydenRocks: true
+  TheGreatRhyno: true
   Elithegreat567: true
   Ben_Shapir0: true
   GalaxyGAL9: true
   Darkevil2988: true
+  Shushino: true
+  sister_sadness: true
   Bluz__: true
   gamaguy27: true
   iGooMo: true
   Raizune: true
   omniscient_beet: true
+  nowp: true
   zKirk: true
   MLG_Twinky: true
   Kilik_CZ: true
@@ -117,6 +146,7 @@ actionBar:
   CoreyDaNoob: true
   Carlos_Dart: true
   ChickensDying: true
+  PlzResetServer: true
   Sour_Skwee: true
   _xmemequeenx_: true
   loovne: true
