--- a/plugins/StaffToggle/config.yml
+++ b/plugins/StaffToggle/config.yml
@@ -19,7 +19,7 @@ staff:
     Rank: admin
     name: Jones02Sean
   zNihility:
-    OnDuty: correct
+    OnDuty: nope
     Rank: mod
     name: zNihility
   JahTheSequel:
