--- a/plugins/WorldGuard/worlds/world/regions.yml
+++ b/plugins/WorldGuard/worlds/world/regions.yml
@@ -18,10 +18,11 @@ regions:
             unique-ids: [b7d591a6-7fb2-4346-968c-f58d00ea2a4a, 996ac391-2e0d-4d45-8171-12a80baea242]
         flags:
             build: deny
+            blocked-cmds: [/t new, /t claim outpost, /t claim]
             use: allow
             invincible: allow
-            blocked-cmds: [/t new, /t claim outpost, /t claim]
             fall-damage: deny
+            interact: allow
             pvp: deny
             mob-spawning: deny
             fire-spread: deny
@@ -35,17 +36,17 @@ regions:
         members: {}
         flags:
             ice-form: deny
+            lava-fire: deny
             frosted-ice-form: deny
             chorus-fruit-teleport: deny
-            lava-fire: deny
             water-flow: deny
-            leaf-decay: deny
             snow-fall: deny
             ice-melt: deny
+            leaf-decay: deny
             interact: allow
             enderman-grief: deny
-            chest-access: deny
             pvp: deny
+            chest-access: deny
             mob-spawning: deny
             fire-spread: deny
             enderpearl: deny
