--- a/plugins/Jobs/actionBarBossbar.yml
+++ b/plugins/Jobs/actionBarBossbar.yml
@@ -16,6 +16,7 @@ bossBar:
   cashzackwilson: true
   TheHammer420: true
   ResetTheServer: true
+  Demiurge69: true
   StarmanPhilly: true
   legomandeux: true
   Jones02Sean: true
@@ -43,6 +44,7 @@ bossBar:
   Pugglee: true
   Jhon_Bagoncoff: true
   TazManiac5947: true
+  GrimDoggo: true
   Brigade42nd: true
   Smeggo: true
   Fern0711: true
@@ -90,6 +92,7 @@ actionBar:
   cashzackwilson: true
   TheHammer420: true
   ResetTheServer: true
+  Demiurge69: true
   StarmanPhilly: true
   legomandeux: true
   Jones02Sean: true
@@ -103,6 +106,7 @@ actionBar:
   CringeMonster: true
   AustinRL_: true
   Thorshmr13: true
+  glojester: true
   MrGamerLine1: true
   BroBott: true
   RealRewind: true
@@ -119,6 +123,7 @@ actionBar:
   Pugglee: true
   Jhon_Bagoncoff: true
   TazManiac5947: true
+  GrimDoggo: true
   Brigade42nd: true
   Smeggo: true
   Fern0711: true
@@ -149,6 +154,8 @@ actionBar:
   PlzResetServer: true
   Sour_Skwee: true
   _xmemequeenx_: true
+  Atrieye: true
   loovne: true
   K9Rage: true
   JahTheSequel: true
+  SteffonG: true
