--- a/plugins/WorldGuard/worlds/world/regions.yml
+++ b/plugins/WorldGuard/worlds/world/regions.yml
@@ -11,23 +11,15 @@
 #
 regions:
     spawn:
-        min: {x: -250, y: 0, z: -250}
-        max: {x: 250, y: 255, z: 250}
+        min: {x: -256, y: 0, z: -256}
+        max: {x: 256, y: 256, z: 256}
         members:
             groups: [builder]
-            unique-ids: [b7d591a6-7fb2-4346-968c-f58d00ea2a4a, 996ac391-2e0d-4d45-8171-12a80baea242]
-        flags:
-            build: deny
-            blocked-cmds: [/t new, /t claim outpost, /t claim]
-            use: allow
-            invincible: allow
-            fall-damage: deny
-            interact: allow
-            pvp: deny
-            mob-spawning: deny
-            fire-spread: deny
-        owners:
-            unique-ids: [b7d591a6-7fb2-4346-968c-f58d00ea2a4a]
+            unique-ids: [996ac391-2e0d-4d45-8171-12a80baea242]
+        flags: {deny-message: 'Sorry! You are at spawn. If you want to find a place
+                to call home, use /rtp.', build: allow, build-group: MEMBERS, greeting: Welcome
+                to the BlockKingdom spawn!, pvp: deny}
+        owners: {}
         type: cuboid
         priority: 0
     foresta_dungeon:
@@ -36,17 +28,17 @@ regions:
         members: {}
         flags:
             ice-form: deny
-            lava-fire: deny
             frosted-ice-form: deny
+            lava-fire: deny
             chorus-fruit-teleport: deny
             water-flow: deny
             snow-fall: deny
-            ice-melt: deny
             leaf-decay: deny
+            ice-melt: deny
             interact: allow
             enderman-grief: deny
-            pvp: deny
             chest-access: deny
+            pvp: deny
             mob-spawning: deny
             fire-spread: deny
             enderpearl: deny
