--- a/plugins/Jobs/actionBarBossbar.yml
+++ b/plugins/Jobs/actionBarBossbar.yml
@@ -2,7 +2,9 @@ bossBar:
   SeantasticSean: true
   JShrives: true
   QuasiYT: true
+  drg650: true
   ChrisTheKnight03: true
+  PeopleButterCups: true
   breadboy_2011: true
   MamitaLena: true
   219creeperboy: true
@@ -29,18 +31,24 @@ bossBar:
   CringeMonster: true
   AustinRL_: true
   Thorshmr13: true
+  Noobshoe: true
   MrGamerLine1: true
   BroBott: true
   RealRewind: true
+  Kingu_Nazo: true
   AncorisPrimarch: true
   55Navyboy: true
   zNihility: true
   TassManta: true
+  PaQ_u: true
+  shanecraft29: true
   ChickensBurning: true
   Corsair88: true
   IAlwaysPotato: true
   Sn3per: true
   BigfootIsReal: true
+  UnthinkableG: true
+  Wizardviable12: true
   Pugglee: true
   Jhon_Bagoncoff: true
   TazManiac5947: true
@@ -48,8 +56,10 @@ bossBar:
   Brigade42nd: true
   Smeggo: true
   Fern0711: true
+  KasaiRyujin: true
   JaydenRocks: true
   TheGreatRhyno: true
+  SirScuffle: true
   Elithegreat567: true
   Ben_Shapir0: true
   GalaxyGAL9: true
@@ -78,7 +88,9 @@ actionBar:
   SeantasticSean: true
   JShrives: true
   QuasiYT: true
+  drg650: true
   ChrisTheKnight03: true
+  PeopleButterCups: true
   breadboy_2011: true
   MamitaLena: true
   219creeperboy: true
@@ -106,20 +118,26 @@ actionBar:
   CringeMonster: true
   AustinRL_: true
   Thorshmr13: true
+  Noobshoe: true
   glojester: true
   MrGamerLine1: true
   BroBott: true
   RealRewind: true
+  Kingu_Nazo: true
   AncorisPrimarch: true
   55Navyboy: true
   ASDF_PvP: true
   zNihility: true
   TassManta: true
+  PaQ_u: true
+  shanecraft29: true
   ChickensBurning: true
   Corsair88: true
   IAlwaysPotato: true
   Sn3per: true
   BigfootIsReal: true
+  UnthinkableG: true
+  Wizardviable12: true
   Pugglee: true
   Jhon_Bagoncoff: true
   TazManiac5947: true
@@ -127,8 +145,10 @@ actionBar:
   Brigade42nd: true
   Smeggo: true
   Fern0711: true
+  KasaiRyujin: true
   JaydenRocks: true
   TheGreatRhyno: true
+  SirScuffle: true
   Elithegreat567: true
   Ben_Shapir0: true
   GalaxyGAL9: true
